--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"ll's study",
+    "title":"ll's blogs",
     "subTitle":"这是一个个人学习博客网站",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
